...
            const SizedBox(height: 20.0),
            Text(double.parse((parameterValue).toStringAsFixed(3)).toString(),
                key: ValueKey('initialParameterValue'),
                style: const TextStyle(
                    fontWeight: FontWeight.bold, fontSize: 20.0))
...
          ),
          body: SingleChildScrollView(
            key: ValueKey('scrollFinder'),
            child: Container(
              padding: const EdgeInsets.only(top: 20, bottom: 20),
...
                        children: <Widget>[
                          TextFormField(
                            key: ValueKey('HospitalIDFinder'),
                            enabled: firstClick,
                            validator: (value) {
...
                          const SizedBox(height: 30.0),
                          TextFormField(
                            key: ValueKey('nameFinder'),
                            controller: nameController,
                            validator: (value) {
...
                          const SizedBox(height: 30.0),
                          TextFormField(
                            key: ValueKey('ageFinder'),
                            decoration: InputDecoration(
                                fillColor: Colors.blue[100],
...
                          const SizedBox(height: 30.0),
                          TextFormField(
                            key: ValueKey('conditionFinder'),
                            // autofocus: false,
                            // initialValue: 'test',
...
                            child: DropdownButtonHideUnderline(
                              child: DropdownButton2(
                                  key: ValueKey('hospitalFinder'),
                                  selectedItemHighlightColor:
                                      const Color.fromARGB(255, 115, 186, 233),
...
                                  items: widget.hospitals
                                      .map((e) => DropdownMenuItem(
                                            key: ValueKey('hospitalScroller'),
                                            value: e,
                                            child: Text(
...
                            padding: const EdgeInsets.symmetric(vertical: 16.0),
                            child: ElevatedButton(
                              key: ValueKey('submitBtnFinder'),
                              onPressed: () async {
                                if (_formKey.currentState!.validate() &&
...
                                  ),
                                  child: Text(deviceStatus,
                                      key: ValueKey('realstatus'),
                                      style: TextStyle(
                                          fontWeight: FontWeight.bold,
...
                                  const EdgeInsets.symmetric(vertical: 16.0),
                              child: IconButton(
                                key: ValueKey('chatIconFinder'),
                                icon: const Icon(Icons.message, size: 40),
                                //iconSize: 40.0,
...
                              padding: const EdgeInsets.all(10),
                              child: IconButton(
                                key: ValueKey('stopIconFinder'),
                                icon: const Icon(Icons.stop_circle, size: 50),
                                //iconSize: 40.0,
...
                                              title: const Text(
                                                'Stop Device',
                                                key: ValueKey('stopMsg'),
                                              ),
                                              content: Text(
                                                'Stopped Device: $deviceID',
                                                key: ValueKey('stopMsg2'),
                                              ),
                                              actions: <Widget>[
                                                TextButton(
                                                  key: ValueKey('stopOk'),
                                                  onPressed: () =>
                                                      Navigator.pop(
...
                              padding: const EdgeInsets.all(10),
                              child: IconButton(
                                key: ValueKey('logoutFinder'),
                                icon: const Icon(Icons.logout, size: 50),
                                //iconSize: 40.0,
...
                                              'Are you sure you want to logout ?',
                                              key: ValueKey(
                                                  'logoutConfirmationFinder')),
                                          actions: <Widget>[
                                            TextButton(
...
                                            ),
                                            TextButton(
                                              key: ValueKey('logoutOKBtn'),
                                              onPressed: () {
                                                conn.disconnect();
...
