...
            padding: const EdgeInsets.all(5.0),
            // color: Colors.grey,
            child: Row(children: <Widget>[
              SizedBox(
                width: 300,
                child: TextFormField(
                  key: ValueKey('chatFieldFinder'),
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(
                          borderRadius:
                              BorderRadius.all(Radius.circular(30.0))),
                      contentPadding: EdgeInsets.all(15),
                      hintText: 'Text Message'),
...
              Container(
                // color: Colors.red,
                padding: const EdgeInsets.only(bottom: 15),
                child: Padding(
                  padding: const EdgeInsets.only(bottom: 0),
                  child: IconButton(
                    key: ValueKey('chatSendFinder'),
                    color: Colors.blueAccent,
                    icon: const Icon(Icons.send, size: 45),
                    //padding: EdgeInsets.all(10),
                    onPressed: () {
                      final msg =
                          Message(messageController.text, DateTime.now(), true);
...
