...
                    showTitles: true,
                    reservedSize: 25,
                    interval: 20,
                    getTitlesWidget: leftTitleWidgets,
                  ),
                ),
                30,
                90)
          ],
        ),
      ],
    );
  }
...
